--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./pic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./"https://github.com/de-vi88/dd/blob/5f668414ee738a72dc5653de4f425516b7779987/Snapchat-994062227.jpg alt="Your Profile Picture" class="profile-picture">
             <h1>DEVI N</h1>
             <p>AM ASSISTANT PROFESSOR</p>
         </div>
